<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">AirDesk</string>
    <string name="action_search_workspace">Search WorkSpace</string>

    <!-- ActionBar Strings for OwnedWorkspace Activities -->
    <!-- Only for owned WorkSpaces -->
    <string name="action_share">Share</string>
    <string name="action_edit_ws">Edit WorkSpace</string>
    <string name="action_delete_ws">Delete WorkSpace</string>
    <string name="action_rename_file">Rename File</string>
    <string name="action_delete_file">Delete File</string>
    <string name="action_edit_file">Edit File</string>
    <string name="action_search_file">Search File</string>
    <string name="action_settings">Settings</string>
    <string name="email">Email</string>
    <string name="nickname">Nickname</string>
    <string name="port">10001</string>

    <!-- Colors -->
    <color name="light_blue">#33b5e5</color>

    <!-- Activity titles -->
    <string name="title_activity_create_workspace">Create Workspace</string>
    <string name="title_rename_file">Rename File</string>
    <string name="title_activity_edit_file">Edit File</string>
    <string name="title_activity_workspace_permissions">Workspace Permissions</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="title_activity_show_public_workspaces">Public Workspaces</string>
    <string name="title_activity_create_file">CreateFileActivity</string>
    <string name="hello_world">Hello world!</string>

</resources>
