<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="pt.ulisboa.tecnico.cmov.cmovproject.app.activity.EditFileActivity">
    <item android:id="@+id/action_settings" android:title="@string/action_settings"
        android:orderInCategory="100" app:showAsAction="never" />
    <item android:id="@+id/action_delete"
        android:icon="@drawable/ic_action_discard"
        android:title="@string/action_delete_file"
        app:showAsAction="always"  />
    <item android:id="@+id/action_edit"
        android:icon="@drawable/ic_action_edit"
        android:title="@string/action_edit_file"
        app:showAsAction="always"  />
    <item android:id="@+id/action_search"
        android:icon="@drawable/ic_action_search"
        android:title="@string/action_search_file"
        app:showAsAction="always"  />
</menu>
