<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools" tools:context=".MainActivity">
    <item android:id="@+id/action_edit"
        android:icon="@drawable/ic_action_edit"
        android:title="@string/action_edit_ws"
        app:showAsAction="never"  />
    <item android:id="@+id/action_delete"
        android:icon="@drawable/ic_action_discard"
        android:title="@string/action_delete_ws"
        app:showAsAction="never"  />
    <item android:id="@+id/action_share"
        android:icon="@drawable/ic_action_group"
        android:title="@string/action_share"
        app:showAsAction="always"  />
    <item android:id="@+id/action_search"
        android:icon="@drawable/ic_action_search"
        android:title="@string/action_search_file"
        app:showAsAction="always"  />
    <!-- Removed: no settings to change
    <item android:id="@+id/action_settings" android:title="@string/action_settings"
        android:orderInCategory="100" app:showAsAction="never" />
    -->
</menu>
